.xmonad/xmonad.errors

xmonad.hs:41:1: error:
    Could not find module `DBus'
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
   |
41 | import qualified DBus as D
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^

xmonad.hs:42:1: error:
    Could not find module `DBus.Client'
    Use -v (or `:set -v` in ghci) to see a list of the files searched for.
   |
42 | import qualified DBus.Client as D
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
